cargo-features = ["edition2024"]

[package]
edition = "2024"
name = "nv"
version = "0.1.0"
authors = ["Simon Kraemer <simon.kraemer@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/nv.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
concurrent = { path = "../../library/concurrent" }
syscall = { path = "../../library/syscall" }